# trimark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_dos.py  configure.py
cmake/: macros.cmake
dos/: dosmain.c  dostime.c  dosutil.h  vga.c  vga.h
sdl/: sdlmain.c  sdltime.c
src/: bmark.c  bmark.h  demo.c  demo.h  drawtris.c  drawtris.h  math.h  minmax.h  mymath.h  mytime.h  random.h  screen.h  triangle.c  triangle.h  tridefs.h  trimark.c  trimark.h  triref.h  tritmpbh.h  tritmpl.h  tritmpl2.h  tritmplb.h  tritmpls.h  tritmps.h  tritmpsc.h  util.h
